--- a/proyecto.html
+++ b/proyecto.html
@@ -72,11 +72,35 @@
 
         <h3> Documentos </h3>
         <ol>
-            <li> <a href="">Diseño</a></li>
-            <li> <a href="">Aplicación</a></li>
-            <li> <a href="">Integrantes</a></li>
+            <li> <a href="PDF/Diseño.pdf" target="_blank">Diseño</a></li>
+            <li> <a href="PDF/Aplicación.pdf" target="_blank">Aplicación</a></li>
+            <li> <a href="PDF/Encuesta.pdf" target="_blank">Encuesta</a></li>
         </ol>
-
+    </div>
+    <div>
+        <h2>Integrantes del grupo</h2>
+        <table border>
+            <tr>
+                <th>Foto</th>
+                <th>Nombre</th>
+                <th>E-mail</th>
+            </tr>
+            <tr>
+                <td><img width="70" height="100" src="IMG/Foto1.png" /></td>
+                <td>Nicolás Tomasi</td>
+                <td><a href="mailto:ntomasi92@gmail.com">ntomasi92@gmail.com</a></td>
+            </tr>
+            <tr>
+                <td><img width="70" height="100" src="IMG/Foto2.png" /></td>
+                <td>Alejandra Pintos</td>
+                <td><a href="mailto:alesutat@gmail.com">alesutat@gmail.com</a></td>
+            </tr>
+            <tr>
+                <td><img width="70" height="100" src="IMG/Foto3.png" /></td>
+                <td>Marcelo Casella</td>
+                <td><a href="mailto:jmcasella@icloud.com">jmcasella@icloud.com</a></td>
+            </tr>
+        </table>
     </div>
 </div>
 </body>
